feat: add "delete recipe" path
