# apps/taysteer-backend/src/resources/users/user.service.types.ts
@@ -11,7 +11,7 @@ export type GetByIdT = (id: string) => Promise<User | undefined>;
 export type GetByLoginT = (login: string) => Promise<User | undefined>;
 export type AddUserT = (data: AsyncIterableIterator<MultipartFile>) => Promise<User | false | string>;
 export type UpdateUserT = (id: string, data: AsyncIterableIterator<MultipartFile>) => Promise<User | false | string>;
-export type DeleteUserT = (id: string) => Promise<number | false>;
+export type DeleteUserT = (id: string) => Promise<number>;
 export type GetUsersByRatingT = (page: number) => Promise<Array<User>>;
 export type RateUserT = (id: string, raterId: string, rating: number) => Promise<User | false>;
 
@@ -19,5 +19,6 @@ export enum UserStringTypes {
   IMAGE = 'image',
   CONFLICT = 'conflict',
   IMAGES_FOLDER = 'user_avatar',
-  RECIPES = 'recipes'
+  RECIPES = 'recipes',
+  RATERS = 'raters'
 }
